# drawyolo

./: .coveragerc  .gitignore  README.rst  mkdocs.sh  pyproject.toml
.github/workflows/: docs.yml  testing.yml
docs/: conf.py  index.rst
drawyolo/: draw.py  main.py
drawyolo copy/: draw.py  main.py
tests/: test_draw.py  test_main.py
tests/test-data/: labels.txt
